[gd_scene load_steps=8 format=2]

[ext_resource path="res://Entities/pixe_space_ship_01.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player_ship.gd" type="Script" id=2]
[ext_resource path="res://Sounds/Metal bang 2.wav" type="AudioStream" id=3]
[ext_resource path="res://shaders/fatty.shader" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )
shader_param/fattyness = 1.0

[sub_resource type="ParticlesMaterial" id=3]
trail_divisor = 17
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.02

[sub_resource type="Animation" id=2]
resource_name = "ripple"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/fattyness")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 0.112656, 14.42 ),
"update": 0,
"values": [ 1.0, 0.531, 3.979, 1.0 ]
}

[node name="ship" type="Sprite"]
material = SubResource( 1 )
position = Vector2( 1.35396, -3.90574 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
local_coords = false
process_material = SubResource( 3 )

[node name="gun_pos" type="Position2D" parent="."]
position = Vector2( 0, -15.525 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -1.385
attenuation = 0.450625

[node name="reload_speed" type="Timer" parent="."]
wait_time = 0.228
one_shot = true

[node name="anim_timer" type="Timer" parent="."]
wait_time = 0.351
one_shot = true

[node name="ship_sneeze" type="AnimationPlayer" parent="."]
anims/ripple = SubResource( 2 )
[connection signal="timeout" from="reload_speed" to="." method="_on_reload_speed_timeout"]
[connection signal="timeout" from="anim_timer" to="." method="_on_anim_timer_timeout"]
